--- a/MasterDetail/Views/User/MisNotificaciones.xaml
+++ b/MasterDetail/Views/User/MisNotificaciones.xaml
@@ -6,9 +6,29 @@
              NavigationPage.BackButtonTitle="MiTurnoAPP"
              Title="Notificaciones">
     <ContentPage.Content>
-        <StackLayout>
-         
-            
+       <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Margin="10,0,10,5">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="1*" />
+                    <RowDefinition Height="3*" />
+                    <RowDefinition Height="3*" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="30*" />
+                    <ColumnDefinition Width="30*" />
+                </Grid.ColumnDefinitions>
+                <StackLayout Orientation="Horizontal">
+                    <Label Text="Received message:"/>
+                    <Label x:Name="lblMsg" Text="(nothing yet)" TextColor="Gray"/>
+                </StackLayout>
+
+                <StackLayout Orientation="Horizontal">
+                    <Label Text="Send:" VerticalOptions="Center"/>
+                    <Entry x:Name="txtMsg" WidthRequest="150"/>
+                    <Button x:Name="btnSend" WidthRequest="100" Text="Send" BackgroundColor="Blue" TextColor="White"/>
+                </StackLayout>
+               
+            </Grid>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
