Notificacion implementado envio recepcion

--- a/MasterDetail/Views/User/MisNotificaciones.xaml
+++ b/MasterDetail/Views/User/MisNotificaciones.xaml
@@ -7,8 +7,17 @@
              Title="Notificaciones">
     <ContentPage.Content>
         <StackLayout>
-         
-            
+            <StackLayout Orientation="Horizontal">
+                <Label Text="Received message:"/>
+                <Label x:Name="lblMsg" Text="(nothing yet)" TextColor="Gray"/>
+            </StackLayout>
+
+            <StackLayout Orientation="Horizontal">
+                <Label Text="Send:" VerticalOptions="Center"/>
+                <Entry x:Name="txtMsg" WidthRequest="150"/>
+                <Button x:Name="btnSend" WidthRequest="100" Text="Send" BackgroundColor="Blue" TextColor="White"/>
+            </StackLayout>
+
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
