--- a/MasterDetail/Views/User/MisNotificaciones.xaml
+++ b/MasterDetail/Views/User/MisNotificaciones.xaml
@@ -6,20 +6,11 @@
              NavigationPage.BackButtonTitle="MiTurnoAPP"
              Title="Notificaciones">
     <ContentPage.Content>
-       <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Margin="10,0,10,5">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="1*" />
-                    <RowDefinition Height="3*" />
-                    <RowDefinition Height="3*" />
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="30*" />
-                    <ColumnDefinition Width="30*" />
-                </Grid.ColumnDefinitions>
+       <StackLayout>
+            
                 <StackLayout Orientation="Horizontal">
                     <Label Text="Received message:"/>
-                    <Label x:Name="lblMsg" Text="(nothing yet)" TextColor="Gray"/>
+                    <Label x:Name="lblMsg" Text="esperando..." TextColor="Gray"/>
                 </StackLayout>
 
                 <StackLayout Orientation="Horizontal">
@@ -28,7 +19,7 @@
                     <Button x:Name="btnSend" WidthRequest="100" Text="Send" BackgroundColor="Blue" TextColor="White"/>
                 </StackLayout>
                
-            </Grid>
+           
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
