--- a/MasterDetail/Views/Detail.xaml
+++ b/MasterDetail/Views/Detail.xaml
@@ -22,10 +22,13 @@
                 
                 <Label x:Name="Bienvenido" Text="" HorizontalOptions="CenterAndExpand" Grid.ColumnSpan="2" Grid.Row="0" Grid.Column="0" VerticalOptions="Center" Font="Bold, 18"/>
                 
-                <Button Image="Listaturnos" Clicked="ListaTurnos" Grid.Row="2" Grid.Column="0" BackgroundColor="Orange" BorderRadius="15"></Button>
-                <Button Image="Mirendimiento" Clicked="MiRendimiento" Grid.Row="2" Grid.Column="1" BackgroundColor="Orange" BorderRadius="15"></Button>
-                <Button Image="Misturnos" Clicked="MisTurnos" Grid.Row="3" Grid.Column="0" BackgroundColor="Orange" BorderRadius="15"></Button>
-                <Button Image="Notificaciones" Clicked="MisNotificaciones" Grid.Row="3" Grid.Column="1" BackgroundColor="Orange" BorderRadius="15"></Button>
+                <Button Image="Listaturnos" Clicked="ListaTurnos" Grid.Row="1" Grid.Column="0" BackgroundColor="Orange" BorderRadius="15"></Button>
+                <Button Image="Mirendimiento" Clicked="MiRendimiento" Grid.Row="1" Grid.Column="1" BackgroundColor="Orange" BorderRadius="15"></Button>
+                <Button Image="Misturnos" Clicked="MisTurnos" Grid.Row="2" Grid.Column="0" BackgroundColor="Orange" BorderRadius="15"></Button>
+                <Button Image="Notificaciones" Clicked="MisNotificaciones" Grid.Row="2" Grid.Column="1" BackgroundColor="Orange" BorderRadius="15"></Button>
+                <controls:AdMobView
+                HorizontalOptions="FillAndExpand"
+                VerticalOptions="Start" Grid.Row="3" Grid.ColumnSpan="2" HeightRequest="90" />
             </Grid>
         </StackLayout>
     </ContentPage.Content>
