--- a/MasterDetail/Views/User/MiRendimiento.xaml
+++ b/MasterDetail/Views/User/MiRendimiento.xaml
@@ -10,7 +10,7 @@
         <StackLayout>
             <controls:AdMobView
                 HorizontalOptions="FillAndExpand"
-                VerticalOptions="Start" />
+                VerticalOptions="Start" HeightRequest="90" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
