--- a/MasterDetail/Views/Detail.xaml
+++ b/MasterDetail/Views/Detail.xaml
@@ -13,7 +13,7 @@
                     <RowDefinition Height="1*" />
                     <RowDefinition Height="3*" />
                     <RowDefinition Height="3*" />
-                    <RowDefinition Height="3*" />
+                    <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="30*" />
@@ -28,7 +28,7 @@
                 <Button Image="Notificaciones" Clicked="MisNotificaciones" Grid.Row="2" Grid.Column="1" BackgroundColor="Orange" BorderRadius="15"></Button>
                 <controls:AdMobView
                 HorizontalOptions="FillAndExpand"
-                VerticalOptions="Start" Grid.Row="3" Grid.ColumnSpan="2" HeightRequest="90" />
+                VerticalOptions="Start" Grid.Row="3" Grid.ColumnSpan="2" HeightRequest="50" />
             </Grid>
         </StackLayout>
     </ContentPage.Content>
