--- a/MasterDetail/Views/User/MisNotificaciones.xaml
+++ b/MasterDetail/Views/User/MisNotificaciones.xaml
@@ -7,21 +7,26 @@
              xmlns:controls="clr-namespace:MasterDetail.Controls"
              Title="Notificaciones">
     <ContentPage.Content>
-       <StackLayout>
-            
-                <StackLayout Orientation="Horizontal">
-                    <Label Text="Received message:"/>
-                    <Label x:Name="lblMsg" Text="esperando..." TextColor="Gray"/>
-                </StackLayout>
+        <StackLayout>
 
-                <StackLayout Orientation="Horizontal">
-                    <Label Text="Send:" VerticalOptions="Center"/>
-                    <Entry x:Name="txtMsg" WidthRequest="150"/>
-                    <Button x:Name="btnSend" WidthRequest="100" Text="Send" BackgroundColor="Blue" TextColor="White"/>
-                </StackLayout>
+            <StackLayout Orientation="Horizontal">
+                <Label Text="Mensaje Recibido: " VerticalOptions="Center" Font="Bold, 14"/>
+
+                <Label x:Name="lblMsg" Text="esperando..." TextColor="Gray"/>
+            </StackLayout>
+
+            <StackLayout Orientation="Horizontal">
+
+                <Label Text="Mensaje: " VerticalOptions="Center" Font="Bold, 14"/>
+
+                <Entry x:Name="txtMsg" Opacity="0.8"  Text="" HorizontalOptions="FillAndExpand" VerticalOptions="Center" FontSize="14"/>
+
+                <Button x:Name="btnSend" Text="Enviar" Grid.Column="1" Grid.Row="3" VerticalOptions="CenterAndExpand" HorizontalOptions="FillAndExpand" BorderRadius="20" Font="Bold, 13" BackgroundColor="orange" TextColor="White" HeightRequest="40"/>
+
+            </StackLayout>
             <controls:AdMobView
                 HorizontalOptions="FillAndExpand"
-                VerticalOptions="Start" Grid.Row="3" Grid.ColumnSpan="2" HeightRequest="90" />
+                VerticalOptions="Start"  HeightRequest="90" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
